--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,7 +5,7 @@
     <title>Overflow tracking x20</title>
     <link rel="stylesheet" href="../bundle/css/style.bundle.css">
     <script defer src="../node_modules/angular/angular.js"></script>
-    <script defer src="../bundle/js/index.js"></script>
+    <script defer src="../bundle/js/overflow-tracking.js"></script>
 </head>
 <body ng-app="overflow-tracking">
 <h1>overflow-tracking="html" resize="200"</h1>
