--- a/demo/demo3.html
+++ b/demo/demo3.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../bundle/css/demo3.css">
     <script defer src="../node_modules/angular/angular.js"></script>
-    <script defer src="../bundle/js/index.js"></script>
+    <script defer src="../bundle/js/overflow-tracking.js"></script>
 </head>
 <body ng-app="overflow-tracking">
 <div class="b-product-page">
