--- a/demo/demo4.html
+++ b/demo/demo4.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../bundle/css/demo4.css">
     <script defer src="../node_modules/angular/angular.js"></script>
-    <script defer src="../bundle/js/index.js"></script>
+    <script defer src="../bundle/js/overflow-tracking.js"></script>
 </head>
 <body ng-app="overflow-tracking" ng-init="repeat = [];repeat.length=2">
 <div class="slide" ng-repeat="n in repeat track by $index">
