--- a/demo/demo.html
+++ b/demo/demo.html
@@ -8,9 +8,9 @@
     <script defer src="../bundle/js/overflow-tracking.js"></script>
 </head>
 <body ng-app="overflow-tracking">
-<h1>overflow-tracking="html" resize="200"</h1>
+<h1>overflow-tracking="html"</h1>
 <div class="b-container" ng-init="repeat = [];repeat.length = 20">
-    <div class="b-container__block" ng-repeat="n in repeat track by $index;" overflow-tracking="html" resize="200">
+    <div class="b-container__block" ng-repeat="n in repeat track by $index;" overflow-tracking="html">
         <h2>Aenean commodo ligula eget dolor aenean massa</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
             elit. Aenean commodo ligula eget dolor. Aenean massa
