--- a/demo/demo2.html
+++ b/demo/demo2.html
@@ -8,7 +8,7 @@
     <script defer src="../bundle/js/overflow-tracking.js"></script>
 </head>
 <body ng-app="overflow-tracking">
-<h1>overflow-tracking="html" resize="200" container=".b-item__description"</h1>
+<h1>overflow-tracking="html"container=".b-item__description"</h1>
 <div class="b-blog-list-widget">
     <div>
         <div class="b-cnr-content">
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                         <div class="b-blog-list-small-item__text">
-                            <div class="b-blog-list-small-item__text-area" overflow-tracking="html" resize="200" container=".b-item__description">
+                            <div class="b-blog-list-small-item__text-area" overflow-tracking="html" container=".b-item__description">
                                 <div class="b-blog-list-small-item__title">
                                     <span>Top Text</span>
                                 </div>
